forth/test/fail/test_switch_no_case_input_empty.af
\ Must fail to compile.
\ This currently fails via no-unused-locals validation, not a switch-specific
\ contract. Empty switch is useless, but language needn't promise this exact
\ diagnostic forever.
fun: test_switch_no_case_input_empty_fail { val key -- out }
  val key switch end
end
